[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solanaeasy"
version = "0.1.0"
description = "The Stripe for Solana — accept blockchain payments without knowing blockchain"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "SolanaEasy", email = "dev@solanaeasy.dev" },
]
keywords = ["solana", "blockchain", "payments", "sdk", "usdc", "crypto", "web3"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "click>=8.0",
]

[project.optional-dependencies]
# Direct Solana network access (wallet creation, RPC calls)
solana = [
    "solders>=0.21",
    "solana>=0.35",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "build>=1.0",
    "twine>=5.0",
]
all = ["solanaeasy[solana,dev]"]

[project.scripts]
solanaeasy = "solanaeasy.cli:cli"

[project.urls]
Homepage = "https://github.com/medeirosdev/solanaeasy"
Documentation = "https://github.com/medeirosdev/solanaeasy#readme"
Repository = "https://github.com/medeirosdev/solanaeasy"
"Bug Tracker" = "https://github.com/medeirosdev/solanaeasy/issues"

# ── Hatch build ───────────────────────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["solanaeasy"]

[tool.hatch.build.targets.sdist]
include = [
    "solanaeasy/",
    "tests/",
    "README.md",
    "llms.txt",
    "FEATURES.md",
    "pyproject.toml",
    ".env.example",
]

# ── Ruff (linter + formatter) ─────────────────────────────────────────────────
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

# ── Mypy (type checker) ───────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Run only unit tests by default; use -m integration to run devnet tests
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests that make real Solana devnet calls (select with -m integration)",
]
